move errorprone into a profile